--- a/index.html
+++ b/index.html
@@ -36,22 +36,8 @@
       </p>
       <p>by Anna Garbier & Lan Zhang</p>
     </div>
-    <div class="main">
-      <a class="item">
-        <img
-          class="backdrop"
-          src="images/01.png"
-          alt="an image google search in a chrome browser window with the keyword 'bread'. There are twelve to fourteen image search results of various kinds of bread."
-        />
-        <div class="haiku" id="haiku-01">
-          <p>Hello hello</p>
-          <p>Hello hello hello</p>
-          <p>Hello hello</p>
-        </div>
-        <p class="caption">
-          et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam
-        </p>
-      </a>
+    <div id="main">
+      <!-- JS will populate the items based on -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
     <script
