minor copy tweak

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         A travel log that documents a day's trip across the image-filled web.
         The log's contents were generated using a custom Chrome
         extension that looks for alt text: short descriptions that
-        accompany many of the web's images "behind the scenes".
-        The log flips the concept of alt text inside-out: it brings the
+        accompany many of the web's images. While alt text typically lives
+        "behind the scences", the log flips the concept inside-out: it brings the
         text to the surface, and reveals alt images only
         on inspection. This is the first part of our ongoing extension-based
         experiment, playing with forms and materials of the web.
