fix typo in copy

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         The log's contents were generated using a custom Chrome
         extension that looks for alt text: short descriptions that
         accompany many of the web's images. While alt text typically lives
-        "behind the scences", the log flips the concept inside-out: it brings the
+        "behind the scenes", the log flips the concept inside-out: it brings the
         text to the surface, and reveals alt images only
         on inspection. This is the first part of our ongoing extension-based
         experiment, playing with forms and materials of the web.
