--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <p class="intro">
         A travel log that documents a day's trip across the image-filled web.
         The log's contents were generated using a custom Chrome
-        extension that looks for alt text: short descriptions that
+        extension that looks for alt text - short descriptions that
         accompany many of the web's images. While alt text typically lives
         "behind the scenes", the log flips the concept inside-out: it brings the
         text to the surface, and reveals alt images only
