--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
       <h2>Today, we saw</h2>
       <p class="intro">
         A travel log that documents a day's trip across the image-filled web.
-        The log's contents were generated using a custom Chrome
-        extension that looks for alt text: short descriptions that
-        accompany many of the web's images "behind the scenes".
-        The log flips the concept of alt text inside-out: it brings the
-        text to the surface, and reveals alt images only
-        on inspection. This is the first part of our ongoing extension-based
-        experiment, playing with forms and materials of the web.
+        The log's contents were generated using a custom Chrome extension that
+        looks for alt text: short descriptions that accompany many of the web's
+        images "behind the scenes". The log flips the concept of alt text
+        inside-out: it brings the text to the surface, and reveals alt images
+        only on inspection. This is the first part of our ongoing
+        extension-based experiment, playing with forms and materials of the web.
       </p>
       <p>by Anna Garbier & Lan Zhang</p>
     </div>
@@ -39,13 +38,6 @@
       <!-- JS will populate the items based on -->
     </div>
     <div id="bg"><img id="bgImg" /></div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
-      integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
     <script src="./data.js"></script>
     <script src="./main.js"></script>
   </body>
