--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="description"
-      content="a webpage that demonstrates haiku(alt text) chrome extension"
+      content=" A travel log that documents a day's trip across the image-filled web."
     />
-    <meta name="keywords" content="haikus, text, alt text, chrome extension" />
+    <meta name="keywords" content="text, alt text, web" />
     <meta name="author" content="Anna Garbier & Lan Zhang" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
